--- a/domashni.html
+++ b/domashni.html
@@ -32,7 +32,46 @@
 <form>
 
     <input type="Eto cto"/>
+
 </form>
+<button>
+    <a href="https://www.google.com">Click me!</a>
+</button>
+    <a href="https://www.google.com">
+    <button>..Click me!</button>
+    </a>
+<ol>
+   <li> <input type="Checkbox"checked/></li>
+   <li> <input type="radio"unchecked/> </li>
+   <li><input value="Baha"></li>
+   <li><input placeholder="adynyz"></li>
+   <li><input type="color"value="#FF0000"/></li>
+   
+</ol>
+  <select>
+<option value="Seattle">Seattle</option>
+<option value="California">California</option>
+<option value="Nyork">New York</option>
+</select> 
+<section>
+    <article>
+        <h1>Penguin Empire</h1>
+    </article>
+<article>
+            <p>some paragtaf</p>
+        
+    </article>
+</section>
+
+<section>
+    <article>
+        <h1>Salam</h1>
+    </article>
+<article>
+            <p>Barlag</p>
+        
+    </article>
+</section>
 </body>
 
 </html>
